--- a/ClassLibrary1/YutyFramework.csproj
+++ b/ClassLibrary1/YutyFramework.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{E76F4C7A-2762-4ECA-8CA0-16C894485FFD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ClassLibrary1</RootNamespace>
-    <AssemblyName>ClassLibrary1</AssemblyName>
+    <RootNamespace>YutyFramework</RootNamespace>
+    <AssemblyName>YutyFramework</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <NuGetPackageImportStamp>
