--- a/ClassLibrary1/YutyFramework.csproj
+++ b/ClassLibrary1/YutyFramework.csproj
@@ -59,7 +59,9 @@
   <ItemGroup>
     <Compile Include="BasePageObject.cs" />
     <Compile Include="BaseTest.cs" />
+    <Compile Include="BrowserType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WebDriverFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
